--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 buildscript {
     repositories {
+        maven {
+            url 'https://repo.spring.io/libs-milestone'
+        }
         jcenter()
         maven {
             url "https://plugins.gradle.org/m2/"
         }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.6.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.0.RC2")
     }
 }
 
@@ -16,6 +19,9 @@ allprojects {
     version = '0.0.1'
 
     repositories {
+        maven {
+            url 'https://repo.spring.io/libs-milestone'
+        }
         jcenter()
         mavenLocal()
         mavenCentral()
@@ -29,18 +35,20 @@ allprojects {
 
     dependencyManagement {
         imports {
-            mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Dalston.SR4"
+            mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Finchley.M7"
         }
 
         dependencies {
             dependency 'org.projectlombok:lombok:1.16.8'
-            dependency 'com.netflix.feign:feign-ribbon:8.14.1'
-            dependency 'org.mockito:mockito-all:1.10.19'
-            dependency 'org.unitils:unitils-core:3.4.2'
-            dependency 'com.jayway.jsonpath:json-path:2.2.0'
-            dependency 'com.jayway.jsonpath:json-path:2.2.0'
-            dependency 'info.developerblog.spring.cloud:spring-cloud-marathon-starter:0.8.1'
-            dependency 'com.mesosphere:marathon-client:0.5.0'
+            dependency 'info.developerblog.spring.cloud:spring-cloud-marathon-starter:2.0.0.RC1'
+            dependency 'info.developerblog.spring.cloud:spring-one-nio-starter:2.0.0.RC6'
+        }
+    }
+
+    idea {
+        module {
+            outputDir file('build/classes/main')
+            testOutputDir file('build/classes/test')
         }
     }
 
